# DE6-First

./: README.md  pyproject.toml  requirements.txt
jobsearch_project/: import_jobs_to_db.py  jobs_postings.csv  manage.py  requirements.txt
jobsearch_project/common/: constants.py  utils.py
jobsearch_project/jobs/: admin.py  models.py  urls.py  utils.py  views.py
jobsearch_project/jobs/management/commands/: READMD.md  makecareerratio.py  makewordcloud.py  makewordcloudbytitle.py
jobsearch_project/jobs/migrations/: 0001_initial.py  0002_alter_jobposting_link.py  0002_jobposting_experience_level.py
jobsearch_project/jobs/static/css/: style.css
jobsearch_project/jobs/templates/jobs/: index.html  job_detail.html  job_list.html  search.html
jobsearch_project/jobsearch_project/: asgi.py  settings.py  urls.py  wsgi.py
jobsearch_project/templates/: base.html
jobsearch_project/templates/includes/: footer.html  header.html
