[project]
name = "de6-first"
version = "0.1.0"
description = ""
authors = [
    {name = "prograsshopper",email = "tjalwled12@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asgiref (==3.8.1)",
    "django (==4.2.20)",
    "django-filter (==24.3)",
    "djangorestframework (==3.15.2)",
    "importlib-metadata (==8.5.0)",
    "markdown (==3.7)",
    "sqlparse (==0.5.3)",
    "typing-extensions (==4.13.2)",
    "tzdata (==2025.2)",
    "zipp (==3.20.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
